content Padding and alignment corrected in ContactComponent, ProjectComponent, FooterComponent and SkillComponent

--- a/src/Contact/index.scss
+++ b/src/Contact/index.scss
@@ -1,6 +1,6 @@
 .ContactComponent {
     display: grid;
-    grid-template-columns: 570px 1fr 145px;
+    grid-template-columns: 570px 1fr 110px;
     grid-template-rows: 130px 440px;
     grid-template-areas:
     'ribbon . .'
@@ -12,7 +12,8 @@
         grid-area: map;
         height: 360px;
         width: 465px;
-        margin-left: 80px;
+        margin-left: 30px;
+        justify-self: center;
         border: 1px solid $cBrown;
         border-radius: 4px;
         overflow: hidden;
@@ -29,7 +30,7 @@
     .form {
         grid-area: form;
         display: grid;
-        grid-template-columns: 80px 305px;
+        grid-template-columns: 115px 305px;
         grid-template-rows: 90px 350px;
         grid-template-areas:
         'header header'
@@ -65,13 +66,13 @@
                 font-size: $sFont;
                 height: 30px;
 
-
                 &[type='email'] {
                     border-radius: 4px;
                     border: 1px solid $cBrown;
                     padding: 0;
                     box-sizing: content-box;
-                    width: 100%;
+                    width: 96%;
+                    padding-left: 10px;
                 }
 
                 &[type='submit'] {
@@ -88,14 +89,15 @@
             }
 
             textarea {
-                height: 110px;
+                height: 105px;
                 border-radius: 4px;
                 border: 1px solid $cBrown;
                 font-size: $sFont;
                 padding: 0;
                 box-sizing: content-box;
-                width: 100%;
+                width: 96%;
                 margin-top: 10px;
+                padding: 5px 0 0 10px;
             }
         }
 
