--- a/src/Footer/index.scss
+++ b/src/Footer/index.scss
@@ -6,7 +6,7 @@
     'linkedin github copyright';
     font-size: $sFont;
     align-items: center;
-    padding-top: 8px;
+    padding: 5px 0 0 35px;
 
     .linkedin {
         grid-area: linkedin;
@@ -61,7 +61,7 @@
     .copyright {
         display: grid;
         justify-self: right;
-        padding-right: 40px;
+        padding-right: 110px;
     }
 
 }// FooterComponent
